@@ -168,6 +168,10 @@
       \code{cat()} when terminated early, such that
       \code{suppressMessages()} has an effect; suggested by Ben Bolker.
 
+      \item \code{citation()} supports inst/CITATION files from package
+      source trees, with \code{lib.loc} pointing to the directory
+      containing the package.
+
       %% Would need more work (notably in  ../src/main/sort.c )
       %% \item New \code{orderL(lst, ....)} for use in \code{do.call()} to
       %% avoid the name problem seen in \PR{17119}.
